--- a/homework-2/styles.css
+++ b/homework-2/styles.css
@@ -1,8 +1,63 @@
 header {
-    display:flex;
-   justify-content: space-between;
+    border-bottom: 10px, lightgreen;
+    border-top: 10px;
+   background-color:lightgreen;
+   font-size: 25px;
+   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+   width: 100%;
 }
 
-a {
+.title p {
+    margin-top: -20px;
+    font-size: smaller;
+}
+
+body {
+    display: flexbox;
+    justify-content: center;
+    margin: auto;
+    width: 50%;
+    background-color: rgb(173, 230, 192);
+
+}
+
+h1, h2, h3, h4 {
+    font-family: Arial, Helvetica, sans-serif;
+
+
+}
+
+.par1 {
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: space-between;
+    width: 600px;
+    min-height: 100px;
+    padding-right: 5px;
+    margin: auto;
     
+}
+
+.li1{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+ul {
+    margin-right: 5px;
+
+}
+
+p {
+    margin-right: 10px;
+}
+
+footer {
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    font-size: 75%;
+    background-color:lightgreen;
+
 }
