--- a/homework-2/styles.css
+++ b/homework-2/styles.css
@@ -16,6 +16,7 @@ body {
     display: flexbox;
     justify-content: center;
     margin: auto;
+    
     width: 50%;
     background-color: rgb(173, 230, 192);
 
@@ -39,18 +40,37 @@ h1, h2, h3, h4 {
 }
 
 .li1{
+    font-family: Arial, Helvetica, sans-serif;
     display: flex;
     justify-content: center;
     margin-bottom: 10px;
+    margin-top: -20px;
 }
 
 ul {
     margin-right: 5px;
-
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 p {
     margin-right: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.sect3 {
+margin: auto;
+display: flex;
+justify-content: center;
+margin-bottom: 10px;
+margin-top: -20px;
+}
+
+img {
+    height: 200px;
+}
+
+.sect4 {
+    font-size: small;
 }
 
 footer {
