--- a/homework-3/css/styles.css
+++ b/homework-3/css/styles.css
@@ -1,96 +1,49 @@
-header {
-    border-bottom: 10px, lightgreen;
-    border-top: 10px;
-   background-color:lightgreen;
-   font-size: 25px;
-   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-   width: 100%;
-}
-
-nav {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  html,
+  body {
+    height: 100%;
+  }
+  
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p {
+    margin-bottom: 16px;
+  }
+  
+  body {
+    background-color: #d59471;
+  }
+  
+  nav {
+    background-color: #ab4b11;
+  }
+  
+  nav ul {
     display: flex;
-    justify-content: space-evenly;
-}
-
-.title p {
-    margin-top: -20px;
-    font-size: smaller;
-    
-}
-
-body {
-    display: flexbox;
-    justify-content: center;
-    margin: auto;
-    
-    width: 50%;
-    background-color: rgb(173, 230, 192);
-
-}
-h1 {
-    background-image: url(https://wallpapercave.com/wp/wp4566768.jpg) ;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 70px;
+    align-items: center;
+    gap: 40px;
+  
+    height: 50px;
+    list-style: none;
+    padding: 0px 20px;
+  }
+  
+  nav ul li a {
+    font-size: 24px;
+    text-decoration: none;
     color: white;
-}
-h1, h2, h3, h4 {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
-    
-
-
-}
-
-.par1 {
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    justify-content: space-between;
-    width: 600px;
-    min-height: 100px;
-    padding-right: 5px;
-    margin: auto;
-    
-}
-
-.li1{
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10px;
-    margin-top: -20px;
-}
-
-ul {
-    margin-right: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-p {
-    margin-right: 10px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.sect3 {
-margin: auto;
-display: flex;
-justify-content: center;
-margin-bottom: 10px;
-margin-top: -20px;
-}
-
-img {
-    height: 200px;
-}
-
-.sect4 {
-    font-size: small;
-}
-
-footer {
-    margin: auto;
-    display: flex;
-    justify-content: center;
-    font-size: 75%;
-    background-color:lightgreen;
-
-}
+  }
+  
+  body > ul {
+    margin-left: 32px;
+  }
+  
